--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Currículo</title>
 </head>
 <body class="bg-white flex m-auto">
-  <div class="w-[1100px] pt-[30px] pb-[100px] px-[15px] m-auto">
+  <div class="max-w-lg  pt-[30px] pb-[100px] px-[15px] m-auto">
     <div class="w-[100%] flex flex-col items-end">
       <img src="./img/color.png" alt="Imagem fundo" class="w-[100%] rounded-[14.76px]">
       <div class="mt-[-5%] px-[30px]"><img src="./img/logo.svg" alt="Logo"></div>
